jdk11 fix